infra/main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 4.16"
    }
  }

  required_version = ">= 1.2.0"
}

provider "aws" {
  profile = "default"
  region = var.regiao_aws
}

# resource "aws_instance" "app_server" {  # recurso utilizado para criar máquinas no EC2 do aws
#   ami = "ami-0cb91c7de36eed2cb"
#   instance_type = var.instancia
#   key_name = var.chave
#   tags = {
#     Name = "Instancia com python e virtualenv"
#   }
# }

resource "aws_launch_template" "maquina" {
  image_id = "ami-0cb91c7de36eed2cb"
  instance_type = var.instancia
  key_name = var.chave
  tags = {
    Name = "Terraform Ansible Python"
  }
  security_group_names = [ var.grupoDeSeguranca ]
  user_data = filebase64("ansible.sh")
}

resource "aws_autoscaling_group" "grupo" {
  availability_zones = [ "${var.regiao_aws}a" ]
  name = var.nomeGrupo
  max_size = var.maximo
  min_size = var.minimo
  launch_template {
    id = aws_launch_template.maquina.id
    version = "$Latest"
  }
}

resource "aws_key_pair" "chaveSSH" {
  key_name = var.chave
  public_key = file("${var.chave}.pub")
}

# output "IP_publico" {
#   value = aws_instance.app_server.public_ip
# }
